Another fix for #2674 - Additional scrollbar is shown in small windows

--- a/packages/survey-creator-core/src/utils/layout.scss
+++ b/packages/survey-creator-core/src/utils/layout.scss
@@ -17,6 +17,7 @@
 
 .svc-flex-row__element--growing {
   flex: 1;
+  overflow: auto;
 }
 
 .svc-flex-column {
